@@ -232,7 +232,7 @@ public abstract class AbstractYamlConfigBuilder extends AbstractConfigBuilder {
                 fillReplacerProperties(n, properties);
             }
         }
-        ConfigReplacer replacer = (ConfigReplacer) Class.forName(replacerClass).newInstance();
+        ConfigReplacer replacer = (ConfigReplacer) Class.forName(replacerClass).getDeclaredConstructor().newInstance();
         replacer.init(properties);
         return replacer;
     }
